--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,9 @@
     "hbs": "~2.8.0",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.1.0",
+    "request": "^2.51.0"
   }
 }
