--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "~4.11.0",
     "hbs": "~2.8.0",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
